# c4rust

./: .gitignore  Cargo.toml  README.md
src/: core.rs  lib.rs  render.rs
