[package]
name = "c4rust"
version = "0.1.0"
edition = "2021"
exclude = ["/examples", ".gitignore", "index.html"]
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"

[[example]]
name = "company"
path = "examples/company/src/main.rs"
